# llm-sidebar-infinite-context

./: .eslintignore  .prettierignore  README.md  eslint.config.mjs  manifest.json  package-lock.json  package.json  tsconfig.json
.cargo/: config.toml
.github/workflows/: build.yml
build-scripts/: build.js  pack-crx.js  prepare-installer-assets.js  run-installer.js
design-system/skins/back-to-the-future/: bttf.js  bttf.wms
design-system/skins/shared/: draggable.js  overlay-bridge.js
design-system/skins/xbox/: auto.js  xbox.js  xbox.wms
design-system/stitch_metro_memory_panel/consolidator_detail/: code.html
design-system/stitch_metro_memory_panel/forgetting_policy_detail/: code.html
design-system/stitch_metro_memory_panel/long_term_memory_detail/: code.html
design-system/stitch_metro_memory_panel/metro_context_v2/: code.html
design-system/stitch_metro_memory_panel/metro_context_v3/: code.html
dist-installer/: llm-sidebar-extension-id.txt
native/installer/: Cargo.toml
native/installer/src/: browsers.rs  diagnose.rs  gui.rs  main.rs
native/overlay-companion/: Cargo.toml  README.md
native/overlay-companion/src/: main.rs  ocr.rs
research/: account-service-dependencies-trending-repos.md  ui-redesign-planning.md
src/components/core/: glow-effect.tsx  magnetic.tsx  (+2 more)
src/hooks/: useClickOutside.tsx
src/onboarding/: App.tsx  index.tsx
src/pages/: browser-memory-test.html  sidebar.html  welcome.html
src/scripts/: constants.ts  injectOverlay.ts  inputCapture.ts  memoryVisualization.ts  types.ts
src/sidebar/: App.tsx
src/styles/: sidebar.css
test-harness/native-companion/: run-harness.js
tests/controllers/: BackgroundController.test.ts  SidebarController.test.ts
(+53 files in other folders)
