[package]
name = "llm-sidebar-installer"
version = "0.1.0"
edition = "2021"
description = "Installer for LLM Sidebar Chrome extension + native host"

[[bin]]
name = "llm-sidebar-installer"
path = "src/main.rs"

[features]
default = ["gui"]
gui = ["eframe", "rfd"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eframe = { version = "0.31", optional = true, default-features = false, features = [
    "default_fonts",
    "glow",
    "x11",
    "wayland",
] }
rfd = { version = "0.15", optional = true }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
