[package]
name = "overlay-companion"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
anyhow = "1.0.102"
dirs = "6.0.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
interprocess = "2.4.0"
ndarray = "0.16"
ort = { version = "2.0.0-rc.12" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
softbuffer = "0.4.8"
winit = "0.30.13"
